# PeaSyo

./: .gitignore  CMakeLists.txt
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/cpp/: audio-decoder.c  chiaki-jni.c
android/app/src/main/cpp/haptic/: haptic_usb.cpp
android/app/src/main/cpp/haptic/libusb/: SETUP.md
android/app/src/main/cpp/haptic/libusb/android/: config.h
android/app/src/main/java/com/peasyo/: MainActivity.java  UsbRumbleManager.java
android/app/src/main/java/com/peasyo/input/: AbstractDualSenseController.java  ControllerHandler.java  DualSenseController.java  DualSenseHapticSender.java  HapticNative.java  UsbDriverService.java
android/app/src/main/java/com/peasyo/lib/: Chiaki.kt
android/app/src/main/java/com/peasyo/session/: StreamSession.kt
cmake/: OpenSSLExternalProject.cmake
lib/: CMakeLists.txt
lib/include/chiaki/: session.h
lib/protobuf/: CMakeLists.txt
src/components/: PerfPanel.tsx
src/languages/: en.ts  zh.ts
src/pages/: Stream.tsx
